2006-01-21  Brian Gough  <bjg@network-theory.co.uk>

	* synchrotron.c (gsl_sf_synchrotron_1_e): added first order
	correction term for the taylor expansion
	(gsl_sf_synchrotron_2_e): added first order correction term for
	the taylor expansion

2006-01-20  Brian Gough  <bjg@network-theory.co.uk>

	* bessel_j.c (gsl_sf_bessel_jl_e): limit the use of
	gsl_sf_bessel_Jnu_asympx_e to the range x>100*l*l to satisfy
	the requirement x>>l*l in the asymptotic expansion

	* bessel_In.c (gsl_sf_bessel_In_scaled_e): limit the use of
	gsl_sf_bessel_I_CF1_ser to the region where the continued
	converges with the allowed 20000 terms (|x|<1e7)

2005-12-20  Brian Gough  <bjg@network-theory.co.uk>

	* debye.c (gsl_sf_debye_5_e, gsl_sf_debye_6_e): added n=5,6
	(R. J. Mathar)

2005-11-15  Brian Gough  <bjg@network-theory.co.uk>

	* dilog.c (dilog_xge0): fix calculation of error estimate

2005-08-04  Brian Gough  <bjg@network-theory.co.uk>

	* coulomb.c (gsl_sf_coulomb_wave_sphF_array): fix warning about
	variable shadowing for k

2005-07-29  Brian Gough  <bjg@network-theory.co.uk>

	* gamma_inc.c (gsl_sf_gamma_inc_Q_e): use continued fraction close
	to peak of the integrand x > a - sqrt(a)

2005-07-28  Brian Gough  <bjg@network-theory.co.uk>

	* elljac.c (gsl_sf_elljac_e): use separate iterations to avoid
	division by zero, new algorithm from Bulirsch avoids inverse trig
	functions.

2005-07-03  Brian Gough  <bjg@network-theory.co.uk>

	* legendre_poly.c (gsl_sf_legendre_sphPlm_e): compute exponential
	internally to avoid underflow error when calling gsl_sf_exp_err

2005-07-02  Brian Gough  <bjg@network-theory.co.uk>

	* bessel_i.c (gsl_sf_bessel_il_scaled_array): handle x==0 as a
	special case

	* bessel_k.c (gsl_sf_bessel_kl_scaled_array): added lmax==0 as a
	special case

	* bessel_y.c (gsl_sf_bessel_yl_array): added lmax==0 as a special
	case

	* transport.c (gsl_sf_transport_2_e): improve error estimate for
	small x

2005-06-26  Brian Gough  <bjg@network-theory.co.uk>
